--- a/index.html
+++ b/index.html
@@ -5,31 +5,71 @@
   <title>HAR Kebap QR Menü</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    body { font-family:sans-serif; background:#fff; color:#222; margin:0; }
-    .container { max-width:420px; margin:0 auto; padding:24px 12px 48px; }
-    h1 { font-size:2em; margin-bottom:8px; }
-    .search { width:100%; padding:8px; margin:8px 0 16px; border:1px solid #ccc; border-radius:6px; }
-    .cat-title { font-weight:bold; font-size:1.2em; border-bottom:2px solid #eee; margin-bottom:10px; padding-bottom:2px;}
-    .item-row { display:flex; justify-content:space-between; align-items:center; padding:8px 0; border-bottom:1px dashed #eee; }
-    .item-name { font-weight:500; }
-    .item-price { font-weight:700; }
-    .footer { color:#777; font-size:12px; margin-top:36px; text-align:center;}
-    @media (max-width:480px){ .container{padding:8px;} }
+    body { font-family: 'Segoe UI', 'Roboto', Arial, sans-serif; background: #faf9f6; color: #232323; margin:0; }
+    .container { max-width:440px; margin:0 auto; padding:24px 12px 32px; }
+    .logo-box { display:flex; flex-direction:column; align-items:center; margin-top:24px; }
+    #logo { width: 84px; height: 84px; object-fit:contain; border-radius:20px; box-shadow:0 2px 12px #ececec; background:#fff; }
+    h1 { font-size:2.1em; font-weight:800; margin:16px 0 8px 0; letter-spacing:.02em; text-align:center;}
+    .subtitle { color:#a56b2c; text-align:center; font-weight:500; font-size:1.01em; margin-bottom:18px;}
+    .search { width:100%; padding:10px; margin:14px 0 22px; border:1.2px solid #efc7a1; border-radius:12px; font-size:1.02em; }
+    .cat-title { font-weight:700; font-size:1.23em; border-bottom:2px solid #ffe3c1; margin-bottom:12px; padding-bottom:5px;}
+    .item-row { display:flex; justify-content:space-between; align-items:center; padding:11px 0; border-bottom:1px dashed #f7d4b0; }
+    .item-name { font-weight:600; letter-spacing:.01em;}
+    .item-price { font-weight:700; color:#a56b2c;}
+    .footer { color:#9d9d9d; font-size:13px; margin-top:38px; text-align:center;}
+    .contacts { background:#fff4e6; border-radius:16px; margin:32px 0 0 0; padding:20px 12px 8px 12px; font-size:1em; box-shadow:0 3px 16px #f5e8d8; }
+    .contacts h2 { font-size:1.13em; font-weight:700; margin:0 0 12px 0; color:#a56b2c;}
+    .contacts strong { font-weight:700; }
+    .social-links { display:flex; flex-wrap:wrap; justify-content:center; gap:14px; margin:12px 0 7px 0;}
+    .social-links a { display:flex; align-items:center; gap:6px; text-decoration:none; color:#fff; font-weight:600; border-radius:999px; padding:6px 14px 6px 11px; font-size:.97em; transition:opacity .14s;}
+    .ig { background:linear-gradient(90deg,#fd5949 0%,#d6249f 50%,#285AEB 100%);}
+    .gm { background:#3366cc;}
+    .social-links a:hover { opacity:.82;}
+    .address { margin:11px 0 0 0; font-size:0.98em;}
+    .tel { color:#ea8500; font-weight:700; font-size:1.07em;}
+    @media (max-width:520px){ .container{padding:9px;} .contacts{padding:14px 5px 4px 8px;} #logo{width:64px;height:64px;} }
   </style>
 </head>
 <body>
 <div class="container">
+
+  <!-- LOGO EKLEMEK İÇİN: src="" kısmına logonun bağlantısını koy veya dosya adını yaz -->
+  <div class="logo-box">
+    <img id="logo" src="" alt="HAR KEBAP logo (logoyu buraya ekle)">
+  </div>
+
   <h1>HAR KEBAP</h1>
-  <div style="color:#999;margin-bottom:4px;">QR Menü (canlı güncellenir)</div>
+  <div class="subtitle">QR Menü (canlı güncellenir)</div>
+
   <input class="search" id="search" placeholder="Ara...">
+
   <div class="cat">
     <div class="cat-title">Menü</div>
     <div id="menu"></div>
   </div>
-  <div class="footer">
-    Menü <a href="https://docs.google.com/spreadsheets/d/1H7cTTOTSVEIeBn_ZX-EB8GdSgOVsnF86nSap4Wy2pOA/edit" target="_blank">buradan</a> güncellenir.<br>
-    Powered by Google Sheets
+
+  <div class="contacts">
+    <h2>İletişim ve Yorum</h2>
+    <div class="social-links">
+      <a href="https://www.instagram.com/hardurum" class="ig" target="_blank" rel="noopener">
+        <svg width="19" height="19" viewBox="0 0 50 50"><circle cx="25" cy="25" r="24" fill="white"/><g><circle cx="25" cy="25" r="9" fill="#fff" stroke="#ea4c89" stroke-width="3"/><circle cx="38.5" cy="11.5" r="2.5" fill="#ea4c89"/></g></svg>
+        Instagram
+      </a>
+      <a href="https://share.google/Xx2qKnXvvq03BbWQn" class="gm" target="_blank" rel="noopener">
+        <svg width="18" height="18" viewBox="0 0 48 48"><g><path fill="#fff" d="M 22.5 31.7 q -1.1 0 -1.9 -0.8 q -0.8 -0.8 -0.8 -1.9 V 20.2 q 0 -1.1 0.8 -1.9 q 0.8 -0.8 1.9 -0.8 h 3 q 1.1 0 1.9 0.8 q 0.8 0.8 0.8 1.9 v 8.8 q 0 1.1 -0.8 1.9 q -0.8 0.8 -1.9 0.8 Z" /></g></svg>
+        Google Yorum
+      </a>
+    </div>
+    <div class="address">
+      <strong>Adres:</strong> Balmumcu Mah. Gazi Umur Paşa Sk. No: 4A Uğur Apt. Beşiktaş / İstanbul<br>
+      <strong>Telefon:</strong> <a href="tel:05353240777" class="tel">0535 324 07 77</a>
+    </div>
   </div>
+
+  <div class="footer">
+    Powered by <a href="https://www.grknstudios.co.uk" style="color:#d8a143" target="_blank">GRKN Studios</a>
+  </div>
+
 </div>
 <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 <script>
@@ -40,10 +80,10 @@ function renderMenu(data){
   const menu = document.getElementById("menu");
   menu.innerHTML = "";
   data.forEach(row=>{
-    const name = row.TITLE || row.Title || row.TITLE;
-    const price = row.PRICE || row.Price || row.PRICE;
-    const currency = row.CURRENCY || row.Currency || row.CURRENCY;
-    if(name.toLowerCase().includes(search)){
+    const name = row.TITLE || row.Title || row.title || "";
+    const price = row.PRICE || row.Price || row.price || "";
+    const currency = row.CURRENCY || row.Currency || row.currency || "";
+    if(name && name.toLowerCase().includes(search)){
       menu.innerHTML += `
         <div class="item-row">
           <span class="item-name">${name}</span>
@@ -52,7 +92,6 @@ function renderMenu(data){
     }
   });
 }
-
 function loadMenu(){
   Papa.parse(CSV_URL, {
     download: true,
@@ -62,7 +101,6 @@ function loadMenu(){
     }
   });
 }
-
 document.getElementById("search").oninput = loadMenu;
 loadMenu();
 </script>
