--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
   <!-- LOGO EKLEMEK İÇİN: src="" kısmına logonun bağlantısını koy veya dosya adını yaz -->
   <div class="logo-box">
-    <img id="logo" src="" alt="HAR KEBAP logo (logoyu buraya ekle)">
-  </div>
+  <img id="logo" src="harkebap_logo.png" alt="HAR KEBAP logo">
+</div>
 
   <h1>HAR KEBAP</h1>
   <div class="subtitle">QR Menü (canlı güncellenir)</div>
