--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </div>
 
   <h1>HAR KEBAP</h1>
-  <div class="subtitle">QR Menü (canlı güncellenir)</div>
+  <div class="subtitle">QR Menü</div>
 
   <input class="search" id="search" placeholder="Ara...">
 
