--- a/index.html
+++ b/index.html
@@ -51,15 +51,19 @@
   <div class="contacts">
     <h2>İletişim ve Yorum</h2>
     <div class="social-links">
-      <a href="https://www.instagram.com/hardurum" class="ig" target="_blank" rel="noopener">
-        <svg width="19" height="19" viewBox="0 0 50 50"><circle cx="25" cy="25" r="24" fill="white"/><g><circle cx="25" cy="25" r="9" fill="#fff" stroke="#ea4c89" stroke-width="3"/><circle cx="38.5" cy="11.5" r="2.5" fill="#ea4c89"/></g></svg>
-        Instagram
-      </a>
-      <a href="https://share.google/Xx2qKnXvvq03BbWQn" class="gm" target="_blank" rel="noopener">
-        <svg width="18" height="18" viewBox="0 0 48 48"><g><path fill="#fff" d="M 22.5 31.7 q -1.1 0 -1.9 -0.8 q -0.8 -0.8 -0.8 -1.9 V 20.2 q 0 -1.1 0.8 -1.9 q 0.8 -0.8 1.9 -0.8 h 3 q 1.1 0 1.9 0.8 q 0.8 0.8 0.8 1.9 v 8.8 q 0 1.1 -0.8 1.9 q -0.8 0.8 -1.9 0.8 Z" /></g></svg>
-        Google Yorum
-      </a>
-    </div>
+  <a href="https://www.instagram.com/hardurum" class="ig" target="_blank" rel="noopener">
+    <svg width="19" height="19" viewBox="0 0 50 50"><circle cx="25" cy="25" r="24" fill="white"/><g><circle cx="25" cy="25" r="9" fill="#fff" stroke="#ea4c89" stroke-width="3"/><circle cx="38.5" cy="11.5" r="2.5" fill="#ea4c89"/></g></svg>
+    Instagram
+  </a>
+  <a href="https://share.google/Xx2qKnXvvq03BbWQn" class="gm" target="_blank" rel="noopener">
+    <svg width="19" height="19" viewBox="0 0 48 48">
+      <circle cx="24" cy="24" r="22" fill="#fff"/>
+      <path d="M24 10a10 10 0 0 1 10 10c0 7.5-10 18-10 18S14 27.5 14 20a10 10 0 0 1 10-10zm0 13.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z" fill="#4285F4"/>
+    </svg>
+    Google Yorum
+  </a>
+</div>
+
     <div class="address">
       <strong>Adres:</strong> Balmumcu Mah. Gazi Umur Paşa Sk. No: 4A Uğur Apt. Beşiktaş / İstanbul<br>
       <strong>Telefon:</strong> <a href="tel:05353240777" class="tel">0535 324 07 77</a>
