--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   <!-- LOGO EKLEMEK İÇİN src kısmını değiştirmen yeterli -->
   <div class="logo-box">
-    <img id="logo" src="harkebap_logo.png" alt="HAR KEBAP logo">
+    <img id="logo" src="hardurum.png" alt="HAR KEBAP logo">
   </div>
 
   <h1>HAR KEBAP</h1>
