--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8">
-  <title>HAR Kebap QR Menü</title>
+  <title>HAR Dürüm QR Menü</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body { font-family: 'Segoe UI', 'Roboto', Arial, sans-serif; background: #faf9f6; color: #232323; margin:0; }
@@ -36,10 +36,10 @@
 
   <!-- LOGO EKLEMEK İÇİN src kısmını değiştirmen yeterli -->
   <div class="logo-box">
-    <img id="logo" src="hardurum.png" alt="HAR KEBAP logo">
+    <img id="logo" src="hardurum.png" alt="HAR Dürüm logo">
   </div>
 
-  <h1>HAR KEBAP</h1>
+  <h1>HAR DÜRÜM</h1>
   <div class="subtitle">QR Menü (canlı güncellenir)</div>
 
   <input class="search" id="search" placeholder="Ara...">
